// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      preuve_input.txt (TXT, 34 o)
    </a>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
        onClick={[Function]}
        title="Renommer"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier Commentee 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      preuve_input.txt (TXT, 34 o)
    </a>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
        onClick={[Function]}
        title="Renommer"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <p
    className="text-xs fr-text-mention--grey mb-0 "
    data-test="comment"
    onClick={[Function]}
  >
    Cf pp 34-35 - Document provisoire, en attente d’approbation
  </p>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier Edition Commentaire 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      preuve_input.txt (TXT, 34 o)
    </a>
  </div>
  <div
    className="fr-input-group fr-my-2v"
  >
    
    <input
      autoFocus={true}
      className="fr-input"
      id="4d55ed79-90d7-4c6b-b690-14644db19241"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      placeholder="Écrire un commentaire..."
      required={false}
      value=""
    />
    
  </div>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Fichier Edition Nom 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      preuve_input.txt (TXT, 34 o)
    </a>
  </div>
  <div
    className="fr-input-group fr-my-2v"
  >
    
    <input
      autoFocus={true}
      className="fr-input"
      id="a783d736-d29f-4a10-a298-80ca86c3cd76"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyUp={[Function]}
      placeholder="Renommer le fichier..."
      required={false}
      value=""
    />
    
  </div>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Lien 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      dodo
    </a>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuveDoc Preuve Lien Commentee 1`] = `
<div
  data-test="item"
>
  <div
    className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
  >
    <a
      className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
      data-test="name"
      href="#"
      onClick={[Function]}
    >
      dodo
    </a>
    <div
      className="invisible group-hover:visible"
    >
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-chat-quote-line"
        onClick={[Function]}
        title="Décrire"
      />
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
        onClick={[Function]}
        title="Supprimer"
      />
    </div>
  </div>
  <p
    className="text-xs fr-text-mention--grey mb-0 "
    data-test="comment"
    onClick={[Function]}
  >
    Cf pp 34-35 - Document provisoire, en attente d’approbation
  </p>
  <span
    className="text-xs grey625"
  >
    Ajouté
     le 
    06 sept. 2022
     par 
    Yolo Dodo
  </span>
</div>
`;
